--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -16,5 +16,22 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
-</ul>
+</ul> -->
 
+<!-- <div style="text-align:center">
+  <h1>
+  LocalCast Weather
+  </h1>
+  <div>Your city, your forecast, right now!</div>
+  <h2>Current Weather</h2>
+  <div>current weather</div>
+</div> -->
+
+<div style="text-align:center">
+  <h1>
+   LocalCast Weather
+   </h1>
+   <div>Your city, your forecast, right now!</div>
+   <h2>Current Weather</h2>
+   <app-current-weather></app-current-weather>
+  </div>
